# e_music

./: ChangeLog  Makefile.am  Makefile.in  clean.sh  cleanup  config.h.in~  configure.ac  configure.ac~  configure.in  tmp
data/: Makefile.am  Makefile.in
data/desktop/: Makefile.am  Makefile.in  e-music.desktop
data/themes/: Makefile.am  Makefile.in  config_dialog.edc  cover.edc  e_music.edc  elm.edc  emusic.edc  icons.edc  mediaplayer.edc  playlist.edc  playlist_view.edc  widget.edc
data/themes/images/elm/: elm.edc
debian/: changelog  control  emusic.substvars  files
po/: ChangeLog  Makevars
src/: Makefile.am  Makefile.in  collections.c  collections.h  e_music.c  e_music.h  e_music_notify.c  e_music_notify.h  e_music_playlist.c  e_music_playlist.h  emusic.c  emusic.h  emusic_callback.c  emusic_callback.h  emusic_config.c  emusic_config.h  emusic_cover_art.c  emusic_cover_art.h  emusic_medialib_info.c  emusic_medialib_info.h  emusic_notify.c  emusic_notify.h  emusic_playlist.c  emusic_playlist.h  main_ui.c  main_ui.h  playback.c  playback.h  utils.c  utils.h  xmms2_callback.c  xmms2_callback.h
src/backend/: Makefile  Makefile.am  Makefile.in  backend.h
src/backend/xmms2/: Makefile  Makefile.am  Makefile.in  album_cover.c  album_cover.h  callback.c  callback.h  collections.c  collections.h  medialib_info.c  medialib_info.h  playback.c  playback.h  playlist.c  playlist.h
src/backend/xmms2/.deps/: album_cover.Po  callback.Po  collections.Po  medialib_info.Po  playback.Po  playlist.Po  utils.Po
src/ui/: Makefile  Makefile.am  Makefile.in  emusic_config_dialog.c  emusic_config_dialog.h  emusic_cover_art.c  emusic_cover_art.h  emusic_event_bg.c  emusic_event_bg.h  emusic_info.c  emusic_info.h  emusic_notify.c  emusic_notify.h  emusic_play_ctl.c  emusic_play_ctl.h  emusic_playlist_ctl.c  emusic_playlist_ctl.h  emusic_playlist_view.c  emusic_playlist_view.h  emusic_slider.c  emusic_slider.h  ui.h
